Cambios y soluciones en claves foraneas

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=gestion_usuarios;Username=postgres;Password=hakiller"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=gestion_usuarios;User Id=app_user;Password=12345;Encrypt=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
