Autenticacion de seguridad

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "GestionUsuarios",
+    "Audience": "GestionUsuariosClient",
+    "Key": "DEV-REEMPLAZAR-por-una-clave-muy-larga-y-segura",
+    "ExpireMinutes": 60
+  }
 }
