--- a/frontend/frontend.csproj
+++ b/frontend/frontend.csproj
@@ -11,7 +11,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="10.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="10.0.0" PrivateAssets="all" />
 
-		<!-- Autenticación -->
+		<!-- Autenticaciï¿½n -->
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="10.0.0" />
 
 		<!-- Blazored LocalStorage -->
@@ -19,6 +19,7 @@
 
 		<!-- Blazored Toast (si lo usas para notificaciones) -->
 		<PackageReference Include="Blazored.Toast" Version="4.2.1" />
+		<PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.13.1" />
 	</ItemGroup>
 
 </Project>
